src/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> repeat_program
Rule 2     repeat_program -> program_options NLINE repeat_program
Rule 3     repeat_program -> <empty>
Rule 4     program_options -> class
Rule 5     program_options -> function
Rule 6     program_options -> declaration
Rule 7     program_options -> <empty>
Rule 8     block -> LCURLY repeat_block RCURLY
Rule 9     repeat_block -> statement NLINE repeat_block
Rule 10    repeat_block -> statement NLINE
Rule 11    repeat_block -> NLINE
Rule 12    init_block -> LCURLY repeat_init_block RCURLY
Rule 13    repeat_init_block -> init_block_content NLINE repeat_init_block
Rule 14    repeat_init_block -> init_block_content NLINE
Rule 15    repeat_init_block -> NLINE
Rule 16    init_block_content -> statement
Rule 17    init_block_content -> declaration
Rule 18    class_block -> LCURLY repeat_class_block RCURLY
Rule 19    repeat_class_block -> class_block_content NLINE repeat_class_block
Rule 20    repeat_class_block -> class_block_content NLINE
Rule 21    repeat_class_block -> NLINE
Rule 22    class_block_content -> function
Rule 23    class_block_content -> declaration
Rule 24    params -> LPAREN params_content RPAREN
Rule 25    params_content -> param
Rule 26    params_content -> param COMMA params_content
Rule 27    params_content -> <empty>
Rule 28    param -> ID COLON type
Rule 29    variable -> VAR ID variable_content
Rule 30    variable_content -> COLON type
Rule 31    variable_content -> <empty>
Rule 32    type -> ID
Rule 33    type -> primitive
Rule 34    type -> LBRACK primitive RBRACK
Rule 35    primitive -> INT
Rule 36    primitive -> FLOAT
Rule 37    primitive -> STRING
Rule 38    primitive -> BOOL
Rule 39    string -> QUOTE repeat_string QUOTE
Rule 40    repeat_string -> string_expr
Rule 41    repeat_string -> string_expr repeat_string
Rule 42    string_expr -> STRINGLIT
Rule 43    string_expr -> BSLASH LPAREN expression RPAREN
Rule 44    class -> CLASS ID class_content class_block
Rule 45    class_content -> COLON ID
Rule 46    class_content -> <empty>
Rule 47    function -> FUNC ID params function_content init_block
Rule 48    function_content -> ARROW primitive
Rule 49    function_content -> <empty>
Rule 50    declaration -> variable ASSIGN expression
Rule 51    declaration -> variable ASSIGN array
Rule 52    array -> LBRACK repeat_array RBRACK
Rule 53    repeat_array -> expression
Rule 54    repeat_array -> expression COMMA repeat_array
Rule 55    bool_expr -> relational_exp
Rule 56    bool_expr -> relational_exp AND bool_expr
Rule 57    bool_expr -> relational_exp OR bool_expr
Rule 58    relational_exp -> expression comp expression
Rule 59    relational_exp -> TRUE
Rule 60    relational_exp -> FALSE
Rule 61    comp -> LESS
Rule 62    comp -> MORE
Rule 63    comp -> EQUALS
Rule 64    comp -> NEQUALS
Rule 65    comp -> LEQUALS
Rule 66    comp -> MEQUALS
Rule 67    expression -> term
Rule 68    expression -> term PLUS term
Rule 69    expression -> term MINUS term
Rule 70    term -> factor
Rule 71    term -> factor DIVIDE factor
Rule 72    term -> factor TIMES factor
Rule 73    factor -> constant
Rule 74    factor -> COLON LPAREN expression RPAREN
Rule 75    call_array -> ID LBRACK expression RBRACK
Rule 76    constant -> dots
Rule 77    constant -> DECIMAL
Rule 78    constant -> BOOL
Rule 79    constant -> NUMBER
Rule 80    constant -> string
Rule 81    constant -> call
Rule 82    constant -> call_array
Rule 83    dots -> ID
Rule 84    dots -> repeat_dots
Rule 85    repeat_dots -> ID DOT right_id
Rule 86    right_id -> ID
Rule 87    right_id -> repeat_dots
Rule 88    statement -> display
Rule 89    statement -> if
Rule 90    statement -> while
Rule 91    statement -> input
Rule 92    statement -> assign
Rule 93    statement -> call
Rule 94    statement -> return
Rule 95    while -> WHILE LPAREN bool_expr RPAREN block
Rule 96    input -> variable ASSIGN INPUT LPAREN string RPAREN
Rule 97    display -> PRINT LPAREN expression RPAREN
Rule 98    return -> RETURN
Rule 99    return -> RETURN bool_expr
Rule 100   return -> RETURN expression
Rule 101   assign -> ID some_op expression
Rule 102   some_op -> ASSIGN
Rule 103   some_op -> PASSIGN
Rule 104   some_op -> LASSIGN
Rule 105   some_op -> MASSIGN
Rule 106   some_op -> DASSIGN
Rule 107   call -> ID LPAREN repeat_call RPAREN
Rule 108   repeat_call -> expression
Rule 109   repeat_call -> expression COMMA repeat_call
Rule 110   repeat_call -> <empty>
Rule 111   if -> IF LPAREN bool_expr RPAREN block if_content
Rule 112   if_content -> ELSE IF
Rule 113   if_content -> ELSE block
Rule 114   if_content -> <empty>

Terminals, with rules where they appear

AND                  : 56
ARROW                : 48
ASSIGN               : 50 51 96 102
BOOL                 : 38 78
BSLASH               : 43
CLASS                : 44
COLON                : 28 30 45 74
COMMA                : 26 54 109
DASSIGN              : 106
DECIMAL              : 77
DIVIDE               : 71
DOT                  : 85
ELSE                 : 112 113
EQUALS               : 63
FALSE                : 60
FLOAT                : 36
FUNC                 : 47
ID                   : 28 29 32 44 45 47 75 83 85 86 101 107
IF                   : 111 112
INPUT                : 96
INT                  : 35
LASSIGN              : 104
LBRACK               : 34 52 75
LCURLY               : 8 12 18
LEQUALS              : 65
LESS                 : 61
LPAREN               : 24 43 74 95 96 97 107 111
MASSIGN              : 105
MEQUALS              : 66
MINUS                : 69
MORE                 : 62
NEQUALS              : 64
NLINE                : 2 9 10 11 13 14 15 19 20 21
NUMBER               : 79
OR                   : 57
PASSIGN              : 103
PLUS                 : 68
PRINT                : 97
QUOTE                : 39 39
RBRACK               : 34 52 75
RCURLY               : 8 12 18
RETURN               : 98 99 100
RPAREN               : 24 43 74 95 96 97 107 111
STRING               : 37
STRINGLIT            : 42
TIMES                : 72
TRUE                 : 59
VAR                  : 29
WHILE                : 95
error                : 

Nonterminals, with rules where they appear

array                : 51
assign               : 92
block                : 95 111 113
bool_expr            : 56 57 95 99 111
call                 : 81 93
call_array           : 82
class                : 4
class_block          : 44
class_block_content  : 19 20
class_content        : 44
comp                 : 58
constant             : 73
declaration          : 6 17 23
display              : 88
dots                 : 76
expression           : 43 50 53 54 58 58 74 75 97 100 101 108 109
factor               : 70 71 71 72 72
function             : 5 22
function_content     : 47
if                   : 89
if_content           : 111
init_block           : 47
init_block_content   : 13 14
input                : 91
param                : 25 26
params               : 47
params_content       : 24 26
primitive            : 33 34 48
program              : 0
program_options      : 2
relational_exp       : 55 56 57
repeat_array         : 52 54
repeat_block         : 8 9
repeat_call          : 107 109
repeat_class_block   : 18 19
repeat_dots          : 84 87
repeat_init_block    : 12 13
repeat_program       : 1 2
repeat_string        : 39 41
return               : 94
right_id             : 85
some_op              : 101
statement            : 9 10 16
string               : 80 96
string_expr          : 40 41
term                 : 67 68 68 69 69
type                 : 28 30
variable             : 50 51 96
variable_content     : 29
while                : 90


state 0

    (0) S' -> . program
    (1) program -> . repeat_program
    (2) repeat_program -> . program_options NLINE repeat_program
    (3) repeat_program -> .
    (4) program_options -> . class
    (5) program_options -> . function
    (6) program_options -> . declaration
    (7) program_options -> .
    (44) class -> . CLASS ID class_content class_block
    (47) function -> . FUNC ID params function_content init_block
    (50) declaration -> . variable ASSIGN expression
    (51) declaration -> . variable ASSIGN array
    (29) variable -> . VAR ID variable_content

    $end            reduce using rule 3 (repeat_program -> .)
    NLINE           reduce using rule 7 (program_options -> .)
    CLASS           shift and go to state 7
    FUNC            shift and go to state 8
    VAR             shift and go to state 10

    program                        shift and go to state 1
    repeat_program                 shift and go to state 2
    program_options                shift and go to state 3
    class                          shift and go to state 4
    function                       shift and go to state 5
    declaration                    shift and go to state 6
    variable                       shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> repeat_program .

    $end            reduce using rule 1 (program -> repeat_program .)


state 3

    (2) repeat_program -> program_options . NLINE repeat_program

    NLINE           shift and go to state 11


state 4

    (4) program_options -> class .

    NLINE           reduce using rule 4 (program_options -> class .)


state 5

    (5) program_options -> function .

    NLINE           reduce using rule 5 (program_options -> function .)


state 6

    (6) program_options -> declaration .

    NLINE           reduce using rule 6 (program_options -> declaration .)


state 7

    (44) class -> CLASS . ID class_content class_block

    ID              shift and go to state 12


state 8

    (47) function -> FUNC . ID params function_content init_block

    ID              shift and go to state 13


state 9

    (50) declaration -> variable . ASSIGN expression
    (51) declaration -> variable . ASSIGN array

    ASSIGN          shift and go to state 14


state 10

    (29) variable -> VAR . ID variable_content

    ID              shift and go to state 15


state 11

    (2) repeat_program -> program_options NLINE . repeat_program
    (2) repeat_program -> . program_options NLINE repeat_program
    (3) repeat_program -> .
    (4) program_options -> . class
    (5) program_options -> . function
    (6) program_options -> . declaration
    (7) program_options -> .
    (44) class -> . CLASS ID class_content class_block
    (47) function -> . FUNC ID params function_content init_block
    (50) declaration -> . variable ASSIGN expression
    (51) declaration -> . variable ASSIGN array
    (29) variable -> . VAR ID variable_content

    $end            reduce using rule 3 (repeat_program -> .)
    NLINE           reduce using rule 7 (program_options -> .)
    CLASS           shift and go to state 7
    FUNC            shift and go to state 8
    VAR             shift and go to state 10

    program_options                shift and go to state 3
    repeat_program                 shift and go to state 16
    class                          shift and go to state 4
    function                       shift and go to state 5
    declaration                    shift and go to state 6
    variable                       shift and go to state 9

state 12

    (44) class -> CLASS ID . class_content class_block
    (45) class_content -> . COLON ID
    (46) class_content -> .

    COLON           shift and go to state 18
    LCURLY          reduce using rule 46 (class_content -> .)

    class_content                  shift and go to state 17

state 13

    (47) function -> FUNC ID . params function_content init_block
    (24) params -> . LPAREN params_content RPAREN

    LPAREN          shift and go to state 20

    params                         shift and go to state 19

state 14

    (50) declaration -> variable ASSIGN . expression
    (51) declaration -> variable ASSIGN . array
    (67) expression -> . term
    (68) expression -> . term PLUS term
    (69) expression -> . term MINUS term
    (52) array -> . LBRACK repeat_array RBRACK
    (70) term -> . factor
    (71) term -> . factor DIVIDE factor
    (72) term -> . factor TIMES factor
    (73) factor -> . constant
    (74) factor -> . COLON LPAREN expression RPAREN
    (76) constant -> . dots
    (77) constant -> . DECIMAL
    (78) constant -> . BOOL
    (79) constant -> . NUMBER
    (80) constant -> . string
    (81) constant -> . call
    (82) constant -> . call_array
    (83) dots -> . ID
    (84) dots -> . repeat_dots
    (39) string -> . QUOTE repeat_string QUOTE
    (107) call -> . ID LPAREN repeat_call RPAREN
    (75) call_array -> . ID LBRACK expression RBRACK
    (85) repeat_dots -> . ID DOT right_id

    LBRACK          shift and go to state 24
    COLON           shift and go to state 27
    DECIMAL         shift and go to state 29
    BOOL            shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 35
    QUOTE           shift and go to state 37

    expression                     shift and go to state 21
    array                          shift and go to state 22
    term                           shift and go to state 23
    factor                         shift and go to state 25
    constant                       shift and go to state 26
    dots                           shift and go to state 28
    string                         shift and go to state 32
    call                           shift and go to state 33
    call_array                     shift and go to state 34
    repeat_dots                    shift and go to state 36

state 15

    (29) variable -> VAR ID . variable_content
    (30) variable_content -> . COLON type
    (31) variable_content -> .

    COLON           shift and go to state 39
    ASSIGN          reduce using rule 31 (variable_content -> .)

    variable_content               shift and go to state 38

state 16

    (2) repeat_program -> program_options NLINE repeat_program .

    $end            reduce using rule 2 (repeat_program -> program_options NLINE repeat_program .)


state 17

    (44) class -> CLASS ID class_content . class_block
    (18) class_block -> . LCURLY repeat_class_block RCURLY

    LCURLY          shift and go to state 41

    class_block                    shift and go to state 40

state 18

    (45) class_content -> COLON . ID

    ID              shift and go to state 42


state 19

    (47) function -> FUNC ID params . function_content init_block
    (48) function_content -> . ARROW primitive
    (49) function_content -> .

    ARROW           shift and go to state 44
    LCURLY          reduce using rule 49 (function_content -> .)

    function_content               shift and go to state 43

state 20

    (24) params -> LPAREN . params_content RPAREN
    (25) params_content -> . param
    (26) params_content -> . param COMMA params_content
    (27) params_content -> .
    (28) param -> . ID COLON type

    RPAREN          reduce using rule 27 (params_content -> .)
    ID              shift and go to state 47

    params_content                 shift and go to state 45
    param                          shift and go to state 46

state 21

    (50) declaration -> variable ASSIGN expression .

    NLINE           reduce using rule 50 (declaration -> variable ASSIGN expression .)


state 22

    (51) declaration -> variable ASSIGN array .

    NLINE           reduce using rule 51 (declaration -> variable ASSIGN array .)


state 23

    (67) expression -> term .
    (68) expression -> term . PLUS term
    (69) expression -> term . MINUS term

    NLINE           reduce using rule 67 (expression -> term .)
    COMMA           reduce using rule 67 (expression -> term .)
    RBRACK          reduce using rule 67 (expression -> term .)
    RPAREN          reduce using rule 67 (expression -> term .)
    LESS            reduce using rule 67 (expression -> term .)
    MORE            reduce using rule 67 (expression -> term .)
    EQUALS          reduce using rule 67 (expression -> term .)
    NEQUALS         reduce using rule 67 (expression -> term .)
    LEQUALS         reduce using rule 67 (expression -> term .)
    MEQUALS         reduce using rule 67 (expression -> term .)
    AND             reduce using rule 67 (expression -> term .)
    OR              reduce using rule 67 (expression -> term .)
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49


state 24

    (52) array -> LBRACK . repeat_array RBRACK
    (53) repeat_array -> . expression
    (54) repeat_array -> . expression COMMA repeat_array
    (67) expression -> . term
    (68) expression -> . term PLUS term
    (69) expression -> . term MINUS term
    (70) term -> . factor
    (71) term -> . factor DIVIDE factor
    (72) term -> . factor TIMES factor
    (73) factor -> . constant
    (74) factor -> . COLON LPAREN expression RPAREN
    (76) constant -> . dots
    (77) constant -> . DECIMAL
    (78) constant -> . BOOL
    (79) constant -> . NUMBER
    (80) constant -> . string
    (81) constant -> . call
    (82) constant -> . call_array
    (83) dots -> . ID
    (84) dots -> . repeat_dots
    (39) string -> . QUOTE repeat_string QUOTE
    (107) call -> . ID LPAREN repeat_call RPAREN
    (75) call_array -> . ID LBRACK expression RBRACK
    (85) repeat_dots -> . ID DOT right_id

    COLON           shift and go to state 27
    DECIMAL         shift and go to state 29
    BOOL            shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 35
    QUOTE           shift and go to state 37

    repeat_array                   shift and go to state 50
    expression                     shift and go to state 51
    term                           shift and go to state 23
    factor                         shift and go to state 25
    constant                       shift and go to state 26
    dots                           shift and go to state 28
    string                         shift and go to state 32
    call                           shift and go to state 33
    call_array                     shift and go to state 34
    repeat_dots                    shift and go to state 36

state 25

    (70) term -> factor .
    (71) term -> factor . DIVIDE factor
    (72) term -> factor . TIMES factor

    PLUS            reduce using rule 70 (term -> factor .)
    MINUS           reduce using rule 70 (term -> factor .)
    NLINE           reduce using rule 70 (term -> factor .)
    COMMA           reduce using rule 70 (term -> factor .)
    RBRACK          reduce using rule 70 (term -> factor .)
    RPAREN          reduce using rule 70 (term -> factor .)
    LESS            reduce using rule 70 (term -> factor .)
    MORE            reduce using rule 70 (term -> factor .)
    EQUALS          reduce using rule 70 (term -> factor .)
    NEQUALS         reduce using rule 70 (term -> factor .)
    LEQUALS         reduce using rule 70 (term -> factor .)
    MEQUALS         reduce using rule 70 (term -> factor .)
    AND             reduce using rule 70 (term -> factor .)
    OR              reduce using rule 70 (term -> factor .)
    DIVIDE          shift and go to state 52
    TIMES           shift and go to state 53


state 26

    (73) factor -> constant .

    DIVIDE          reduce using rule 73 (factor -> constant .)
    TIMES           reduce using rule 73 (factor -> constant .)
    PLUS            reduce using rule 73 (factor -> constant .)
    MINUS           reduce using rule 73 (factor -> constant .)
    NLINE           reduce using rule 73 (factor -> constant .)
    COMMA           reduce using rule 73 (factor -> constant .)
    RBRACK          reduce using rule 73 (factor -> constant .)
    RPAREN          reduce using rule 73 (factor -> constant .)
    LESS            reduce using rule 73 (factor -> constant .)
    MORE            reduce using rule 73 (factor -> constant .)
    EQUALS          reduce using rule 73 (factor -> constant .)
    NEQUALS         reduce using rule 73 (factor -> constant .)
    LEQUALS         reduce using rule 73 (factor -> constant .)
    MEQUALS         reduce using rule 73 (factor -> constant .)
    AND             reduce using rule 73 (factor -> constant .)
    OR              reduce using rule 73 (factor -> constant .)


state 27

    (74) factor -> COLON . LPAREN expression RPAREN

    LPAREN          shift and go to state 54


state 28

    (76) constant -> dots .

    DIVIDE          reduce using rule 76 (constant -> dots .)
    TIMES           reduce using rule 76 (constant -> dots .)
    PLUS            reduce using rule 76 (constant -> dots .)
    MINUS           reduce using rule 76 (constant -> dots .)
    NLINE           reduce using rule 76 (constant -> dots .)
    COMMA           reduce using rule 76 (constant -> dots .)
    RBRACK          reduce using rule 76 (constant -> dots .)
    RPAREN          reduce using rule 76 (constant -> dots .)
    LESS            reduce using rule 76 (constant -> dots .)
    MORE            reduce using rule 76 (constant -> dots .)
    EQUALS          reduce using rule 76 (constant -> dots .)
    NEQUALS         reduce using rule 76 (constant -> dots .)
    LEQUALS         reduce using rule 76 (constant -> dots .)
    MEQUALS         reduce using rule 76 (constant -> dots .)
    AND             reduce using rule 76 (constant -> dots .)
    OR              reduce using rule 76 (constant -> dots .)


state 29

    (77) constant -> DECIMAL .

    DIVIDE          reduce using rule 77 (constant -> DECIMAL .)
    TIMES           reduce using rule 77 (constant -> DECIMAL .)
    PLUS            reduce using rule 77 (constant -> DECIMAL .)
    MINUS           reduce using rule 77 (constant -> DECIMAL .)
    NLINE           reduce using rule 77 (constant -> DECIMAL .)
    COMMA           reduce using rule 77 (constant -> DECIMAL .)
    RBRACK          reduce using rule 77 (constant -> DECIMAL .)
    RPAREN          reduce using rule 77 (constant -> DECIMAL .)
    LESS            reduce using rule 77 (constant -> DECIMAL .)
    MORE            reduce using rule 77 (constant -> DECIMAL .)
    EQUALS          reduce using rule 77 (constant -> DECIMAL .)
    NEQUALS         reduce using rule 77 (constant -> DECIMAL .)
    LEQUALS         reduce using rule 77 (constant -> DECIMAL .)
    MEQUALS         reduce using rule 77 (constant -> DECIMAL .)
    AND             reduce using rule 77 (constant -> DECIMAL .)
    OR              reduce using rule 77 (constant -> DECIMAL .)


state 30

    (78) constant -> BOOL .

    DIVIDE          reduce using rule 78 (constant -> BOOL .)
    TIMES           reduce using rule 78 (constant -> BOOL .)
    PLUS            reduce using rule 78 (constant -> BOOL .)
    MINUS           reduce using rule 78 (constant -> BOOL .)
    NLINE           reduce using rule 78 (constant -> BOOL .)
    COMMA           reduce using rule 78 (constant -> BOOL .)
    RBRACK          reduce using rule 78 (constant -> BOOL .)
    RPAREN          reduce using rule 78 (constant -> BOOL .)
    LESS            reduce using rule 78 (constant -> BOOL .)
    MORE            reduce using rule 78 (constant -> BOOL .)
    EQUALS          reduce using rule 78 (constant -> BOOL .)
    NEQUALS         reduce using rule 78 (constant -> BOOL .)
    LEQUALS         reduce using rule 78 (constant -> BOOL .)
    MEQUALS         reduce using rule 78 (constant -> BOOL .)
    AND             reduce using rule 78 (constant -> BOOL .)
    OR              reduce using rule 78 (constant -> BOOL .)


state 31

    (79) constant -> NUMBER .

    DIVIDE          reduce using rule 79 (constant -> NUMBER .)
    TIMES           reduce using rule 79 (constant -> NUMBER .)
    PLUS            reduce using rule 79 (constant -> NUMBER .)
    MINUS           reduce using rule 79 (constant -> NUMBER .)
    NLINE           reduce using rule 79 (constant -> NUMBER .)
    COMMA           reduce using rule 79 (constant -> NUMBER .)
    RBRACK          reduce using rule 79 (constant -> NUMBER .)
    RPAREN          reduce using rule 79 (constant -> NUMBER .)
    LESS            reduce using rule 79 (constant -> NUMBER .)
    MORE            reduce using rule 79 (constant -> NUMBER .)
    EQUALS          reduce using rule 79 (constant -> NUMBER .)
    NEQUALS         reduce using rule 79 (constant -> NUMBER .)
    LEQUALS         reduce using rule 79 (constant -> NUMBER .)
    MEQUALS         reduce using rule 79 (constant -> NUMBER .)
    AND             reduce using rule 79 (constant -> NUMBER .)
    OR              reduce using rule 79 (constant -> NUMBER .)


state 32

    (80) constant -> string .

    DIVIDE          reduce using rule 80 (constant -> string .)
    TIMES           reduce using rule 80 (constant -> string .)
    PLUS            reduce using rule 80 (constant -> string .)
    MINUS           reduce using rule 80 (constant -> string .)
    NLINE           reduce using rule 80 (constant -> string .)
    COMMA           reduce using rule 80 (constant -> string .)
    RBRACK          reduce using rule 80 (constant -> string .)
    RPAREN          reduce using rule 80 (constant -> string .)
    LESS            reduce using rule 80 (constant -> string .)
    MORE            reduce using rule 80 (constant -> string .)
    EQUALS          reduce using rule 80 (constant -> string .)
    NEQUALS         reduce using rule 80 (constant -> string .)
    LEQUALS         reduce using rule 80 (constant -> string .)
    MEQUALS         reduce using rule 80 (constant -> string .)
    AND             reduce using rule 80 (constant -> string .)
    OR              reduce using rule 80 (constant -> string .)


state 33

    (81) constant -> call .

    DIVIDE          reduce using rule 81 (constant -> call .)
    TIMES           reduce using rule 81 (constant -> call .)
    PLUS            reduce using rule 81 (constant -> call .)
    MINUS           reduce using rule 81 (constant -> call .)
    NLINE           reduce using rule 81 (constant -> call .)
    COMMA           reduce using rule 81 (constant -> call .)
    RBRACK          reduce using rule 81 (constant -> call .)
    RPAREN          reduce using rule 81 (constant -> call .)
    LESS            reduce using rule 81 (constant -> call .)
    MORE            reduce using rule 81 (constant -> call .)
    EQUALS          reduce using rule 81 (constant -> call .)
    NEQUALS         reduce using rule 81 (constant -> call .)
    LEQUALS         reduce using rule 81 (constant -> call .)
    MEQUALS         reduce using rule 81 (constant -> call .)
    AND             reduce using rule 81 (constant -> call .)
    OR              reduce using rule 81 (constant -> call .)


state 34

    (82) constant -> call_array .

    DIVIDE          reduce using rule 82 (constant -> call_array .)
    TIMES           reduce using rule 82 (constant -> call_array .)
    PLUS            reduce using rule 82 (constant -> call_array .)
    MINUS           reduce using rule 82 (constant -> call_array .)
    NLINE           reduce using rule 82 (constant -> call_array .)
    COMMA           reduce using rule 82 (constant -> call_array .)
    RBRACK          reduce using rule 82 (constant -> call_array .)
    RPAREN          reduce using rule 82 (constant -> call_array .)
    LESS            reduce using rule 82 (constant -> call_array .)
    MORE            reduce using rule 82 (constant -> call_array .)
    EQUALS          reduce using rule 82 (constant -> call_array .)
    NEQUALS         reduce using rule 82 (constant -> call_array .)
    LEQUALS         reduce using rule 82 (constant -> call_array .)
    MEQUALS         reduce using rule 82 (constant -> call_array .)
    AND             reduce using rule 82 (constant -> call_array .)
    OR              reduce using rule 82 (constant -> call_array .)


state 35

    (83) dots -> ID .
    (107) call -> ID . LPAREN repeat_call RPAREN
    (75) call_array -> ID . LBRACK expression RBRACK
    (85) repeat_dots -> ID . DOT right_id

    DIVIDE          reduce using rule 83 (dots -> ID .)
    TIMES           reduce using rule 83 (dots -> ID .)
    PLUS            reduce using rule 83 (dots -> ID .)
    MINUS           reduce using rule 83 (dots -> ID .)
    NLINE           reduce using rule 83 (dots -> ID .)
    COMMA           reduce using rule 83 (dots -> ID .)
    RBRACK          reduce using rule 83 (dots -> ID .)
    RPAREN          reduce using rule 83 (dots -> ID .)
    LESS            reduce using rule 83 (dots -> ID .)
    MORE            reduce using rule 83 (dots -> ID .)
    EQUALS          reduce using rule 83 (dots -> ID .)
    NEQUALS         reduce using rule 83 (dots -> ID .)
    LEQUALS         reduce using rule 83 (dots -> ID .)
    MEQUALS         reduce using rule 83 (dots -> ID .)
    AND             reduce using rule 83 (dots -> ID .)
    OR              reduce using rule 83 (dots -> ID .)
    LPAREN          shift and go to state 55
    LBRACK          shift and go to state 56
    DOT             shift and go to state 57


state 36

    (84) dots -> repeat_dots .

    DIVIDE          reduce using rule 84 (dots -> repeat_dots .)
    TIMES           reduce using rule 84 (dots -> repeat_dots .)
    PLUS            reduce using rule 84 (dots -> repeat_dots .)
    MINUS           reduce using rule 84 (dots -> repeat_dots .)
    NLINE           reduce using rule 84 (dots -> repeat_dots .)
    COMMA           reduce using rule 84 (dots -> repeat_dots .)
    RBRACK          reduce using rule 84 (dots -> repeat_dots .)
    RPAREN          reduce using rule 84 (dots -> repeat_dots .)
    LESS            reduce using rule 84 (dots -> repeat_dots .)
    MORE            reduce using rule 84 (dots -> repeat_dots .)
    EQUALS          reduce using rule 84 (dots -> repeat_dots .)
    NEQUALS         reduce using rule 84 (dots -> repeat_dots .)
    LEQUALS         reduce using rule 84 (dots -> repeat_dots .)
    MEQUALS         reduce using rule 84 (dots -> repeat_dots .)
    AND             reduce using rule 84 (dots -> repeat_dots .)
    OR              reduce using rule 84 (dots -> repeat_dots .)


state 37

    (39) string -> QUOTE . repeat_string QUOTE
    (40) repeat_string -> . string_expr
    (41) repeat_string -> . string_expr repeat_string
    (42) string_expr -> . STRINGLIT
    (43) string_expr -> . BSLASH LPAREN expression RPAREN

    STRINGLIT       shift and go to state 60
    BSLASH          shift and go to state 61

    repeat_string                  shift and go to state 58
    string_expr                    shift and go to state 59

state 38

    (29) variable -> VAR ID variable_content .

    ASSIGN          reduce using rule 29 (variable -> VAR ID variable_content .)


state 39

    (30) variable_content -> COLON . type
    (32) type -> . ID
    (33) type -> . primitive
    (34) type -> . LBRACK primitive RBRACK
    (35) primitive -> . INT
    (36) primitive -> . FLOAT
    (37) primitive -> . STRING
    (38) primitive -> . BOOL

    ID              shift and go to state 63
    LBRACK          shift and go to state 65
    INT             shift and go to state 66
    FLOAT           shift and go to state 67
    STRING          shift and go to state 68
    BOOL            shift and go to state 69

    type                           shift and go to state 62
    primitive                      shift and go to state 64

state 40

    (44) class -> CLASS ID class_content class_block .

    NLINE           reduce using rule 44 (class -> CLASS ID class_content class_block .)


state 41

    (18) class_block -> LCURLY . repeat_class_block RCURLY
    (19) repeat_class_block -> . class_block_content NLINE repeat_class_block
    (20) repeat_class_block -> . class_block_content NLINE
    (21) repeat_class_block -> . NLINE
    (22) class_block_content -> . function
    (23) class_block_content -> . declaration
    (47) function -> . FUNC ID params function_content init_block
    (50) declaration -> . variable ASSIGN expression
    (51) declaration -> . variable ASSIGN array
    (29) variable -> . VAR ID variable_content

    NLINE           shift and go to state 72
    FUNC            shift and go to state 8
    VAR             shift and go to state 10

    repeat_class_block             shift and go to state 70
    class_block_content            shift and go to state 71
    function                       shift and go to state 73
    declaration                    shift and go to state 74
    variable                       shift and go to state 9

state 42

    (45) class_content -> COLON ID .

    LCURLY          reduce using rule 45 (class_content -> COLON ID .)


state 43

    (47) function -> FUNC ID params function_content . init_block
    (12) init_block -> . LCURLY repeat_init_block RCURLY

    LCURLY          shift and go to state 76

    init_block                     shift and go to state 75

state 44

    (48) function_content -> ARROW . primitive
    (35) primitive -> . INT
    (36) primitive -> . FLOAT
    (37) primitive -> . STRING
    (38) primitive -> . BOOL

    INT             shift and go to state 66
    FLOAT           shift and go to state 67
    STRING          shift and go to state 68
    BOOL            shift and go to state 69

    primitive                      shift and go to state 77

state 45

    (24) params -> LPAREN params_content . RPAREN

    RPAREN          shift and go to state 78


state 46

    (25) params_content -> param .
    (26) params_content -> param . COMMA params_content

    RPAREN          reduce using rule 25 (params_content -> param .)
    COMMA           shift and go to state 79


state 47

    (28) param -> ID . COLON type

    COLON           shift and go to state 80


state 48

    (68) expression -> term PLUS . term
    (70) term -> . factor
    (71) term -> . factor DIVIDE factor
    (72) term -> . factor TIMES factor
    (73) factor -> . constant
    (74) factor -> . COLON LPAREN expression RPAREN
    (76) constant -> . dots
    (77) constant -> . DECIMAL
    (78) constant -> . BOOL
    (79) constant -> . NUMBER
    (80) constant -> . string
    (81) constant -> . call
    (82) constant -> . call_array
    (83) dots -> . ID
    (84) dots -> . repeat_dots
    (39) string -> . QUOTE repeat_string QUOTE
    (107) call -> . ID LPAREN repeat_call RPAREN
    (75) call_array -> . ID LBRACK expression RBRACK
    (85) repeat_dots -> . ID DOT right_id

    COLON           shift and go to state 27
    DECIMAL         shift and go to state 29
    BOOL            shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 35
    QUOTE           shift and go to state 37

    term                           shift and go to state 81
    factor                         shift and go to state 25
    constant                       shift and go to state 26
    dots                           shift and go to state 28
    string                         shift and go to state 32
    call                           shift and go to state 33
    call_array                     shift and go to state 34
    repeat_dots                    shift and go to state 36

state 49

    (69) expression -> term MINUS . term
    (70) term -> . factor
    (71) term -> . factor DIVIDE factor
    (72) term -> . factor TIMES factor
    (73) factor -> . constant
    (74) factor -> . COLON LPAREN expression RPAREN
    (76) constant -> . dots
    (77) constant -> . DECIMAL
    (78) constant -> . BOOL
    (79) constant -> . NUMBER
    (80) constant -> . string
    (81) constant -> . call
    (82) constant -> . call_array
    (83) dots -> . ID
    (84) dots -> . repeat_dots
    (39) string -> . QUOTE repeat_string QUOTE
    (107) call -> . ID LPAREN repeat_call RPAREN
    (75) call_array -> . ID LBRACK expression RBRACK
    (85) repeat_dots -> . ID DOT right_id

    COLON           shift and go to state 27
    DECIMAL         shift and go to state 29
    BOOL            shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 35
    QUOTE           shift and go to state 37

    term                           shift and go to state 82
    factor                         shift and go to state 25
    constant                       shift and go to state 26
    dots                           shift and go to state 28
    string                         shift and go to state 32
    call                           shift and go to state 33
    call_array                     shift and go to state 34
    repeat_dots                    shift and go to state 36

state 50

    (52) array -> LBRACK repeat_array . RBRACK

    RBRACK          shift and go to state 83


state 51

    (53) repeat_array -> expression .
    (54) repeat_array -> expression . COMMA repeat_array

    RBRACK          reduce using rule 53 (repeat_array -> expression .)
    COMMA           shift and go to state 84


state 52

    (71) term -> factor DIVIDE . factor
    (73) factor -> . constant
    (74) factor -> . COLON LPAREN expression RPAREN
    (76) constant -> . dots
    (77) constant -> . DECIMAL
    (78) constant -> . BOOL
    (79) constant -> . NUMBER
    (80) constant -> . string
    (81) constant -> . call
    (82) constant -> . call_array
    (83) dots -> . ID
    (84) dots -> . repeat_dots
    (39) string -> . QUOTE repeat_string QUOTE
    (107) call -> . ID LPAREN repeat_call RPAREN
    (75) call_array -> . ID LBRACK expression RBRACK
    (85) repeat_dots -> . ID DOT right_id
